k8s/apps/j1-mqtt-kafka-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j1-mqtt-kafka-bridge
  namespace: disaster-response
  labels:
    app: j1-mqtt-kafka-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j1-mqtt-kafka-bridge
  template:
    metadata:
      labels:
        app: j1-mqtt-kafka-bridge
    spec:
      containers:
        - name: j1-mqtt-kafka-bridge
          image: dehanns/disaster-j1-mqtt-kafka-bridge:v1.1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
