k8s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disaster-ingress
  namespace: disaster-response
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 188.166.197.144.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: j3-dms
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
